--- a/style.css
+++ b/style.css
@@ -9,8 +9,9 @@ body, html {
 
 /* The hero image */
 .hero-image {
-    background-image: url("angel.jpg");
-    height: 70%;
+    /*background-image: url("key.jpg");*/
+    background-image: url("angel.jpg"); 
+    height: 90%;
 
     /* Position and center the image to scale nicely on all screens */
     background-position: center;
@@ -20,7 +21,7 @@ body, html {
     
 }
 
-/* Place text in the middle of the image */
+/* Place text in the middle of the image with outline*/
 .hero-text {
     text-align: center;
     position: absolute;
@@ -42,19 +43,42 @@ nav{
     top: 90%;
     left: 50%;
     transform: translate(-50%, -50%);
+     text-shadow:
+    -1px -1px 0 #000,
+    1px -1px 0 #000,
+    -1px 1px 0 #000,
+    1px 1px 0 #000; 
    
 }
 nav ul{
     list-style: none;
 }
 nav li{
+    padding-right: 5px;
     display: inline;
 }
 nav li a{
     text-decoration: none;
     color: white;
 } 
+nav li a:hover{
+    font-size: 150%;
+}
 
+.begin{
+    margin: 0;
+    background-color: black;
+    
+    
+    border: 1px solid black;
+}
+.begin a{
+       text-decoration: none;
+       color: white;
+       /*border-radius: 15%;*/
+       /*width: 150px;*/
+       /*border: 1px solid white;*/
+}
 /*round image*/
 .me{
     border-radius: 50%;
@@ -63,6 +87,7 @@ nav li a{
     display: block;
     margin-left: auto;
     margin-right: auto;
+    box-shadow: none;
 }
 .intro{
     /*height: 50%;*/
@@ -70,6 +95,7 @@ nav li a{
     background-color: black;
     color: white;
     border-top: 1px solid black;
+    padding-bottom: 1%;
 }
 .introtext{
     /*margin: 30px;
@@ -84,15 +110,19 @@ nav li a{
 }
 h1{
     text-align: center;
-    /*font-family: "Arial Black", Gadget, sans-serif;*/
-    /*font-family: Impact, Charcoal, sans-serif;*/
-    /*font-family: 'Atomic Age';*/
-    font-family: 'Rubik Mono One';
+    font-family: 'Bubbler One', sans-serif;
     /*font-family: 'Spicy Rice';*/
 }
 
 h2{
     font-family: 'Atomic Age';
+}
+.proj{
+    margin: 0;
+    /*background-color: crimson;*/
+    /*color: white;*/
+    /*border-top: 1px solid black;*/
+    padding-bottom: 20px; 
 }
 .projtext{
     /*margin: 30px;
@@ -104,21 +134,18 @@ h2{
     margin-left: auto;
     margin-right: auto;
 }
-#evoting{
-    /*background-color: #003366;*/
-    padding: 5%;
-    padding-top: 0;
-}
-.evotepic{
+
+.description-pic{
     width: 500px;
     display: block;
     margin-left: auto;
     margin-right: auto;
 }
-/*#evote{
-    display: none;
-}*/
-#evoter{
+#evoting{
+    /*background-color: navy;*/
+}
+
+#small-e-vote{
     display: none;
     width: 100%;
     height: 100%;
@@ -128,18 +155,31 @@ input{
 }
 #bt2{
     display: none;
-     position:fixed !important; 
-     position:absolute;
+    position:fixed !important; 
+    position:absolute;
     right:8%;
     bottom:5%;
 }
-
+#bt3{
+    display: none;
+    position:fixed !important; 
+    position:absolute;
+    right:8%;
+    bottom:5%; 
+}
 #sitebuilder{
     margin: 0;
     padding: 0;
     width: 100%;
     /*background-color: #990000;*/
+    /*background-color: crimson;*/
 }
+#small-sitebuilder{
+    display: none;
+    width: 100%;
+    height: 100%;
+}
+
 /*display of smaller webpage */
 object{
     /*background-color: white;*/
@@ -166,11 +206,14 @@ div.image {
     display: inline-block;
     text-align: center;
     width: 370px;
+    padding-left: 5px;
+    padding-bottom: 1%;
 }
 img {
     width: 350px;
     /*height: 100px;*/
     background-color: grey;
+    box-shadow: 10px 10px 5px #888888;
 }
 .caption {
     font-size: 80%;
@@ -178,6 +221,30 @@ img {
     text-align: left;
     padding: 2px;
 }
+.contact{
+    margin: 0;
+    min-height: 10%;
+    background-color: black;
+}
+.icon{
+    box-shadow: none;
+    margin: 10px;
+    width: 80px;
+    border-radius: 50%;
+    background-color: black;
+}
+.icons{
+    width: 30%;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: center;
+    padding-top: 1%;
+    /*border: 1px solid green;*/
+}
+
+
+
 /*.caption p{
     text-align: center;
 
