--- a/style.css
+++ b/style.css
@@ -6,9 +6,51 @@ body, html {
     font-size: 110%;
     margin: 0;
 }
+.title{
+    height: 100%;
+}
+.small-hero-image{
+    text-align: center;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    box-shadow: none;
+    /*width: 300px;*/
 
+}
+#name{
+    text-align: center;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+#small-hero-nav{
+    text-align: center;
+    position: absolute;
+    top: 80%;
+    left: 47%;
+    transform: translate(-50%, -50%);
+    font-size: 80%;
+}
+#small-hero-nav ul{
+    list-style: none;
+}
+#small-hero-nav li{
+    padding-right: 5px;
+    display: inline;
+}
+#small-hero-nav li a{
+    text-decoration: none;
+    color: black;
+} 
+#small-hero-nav li a:hover{
+    font-size: 150%;
+}
 /* The hero image */
 .hero-image {
+    display: none;
     /*background-image: url("key.jpg");*/
     background-image: url("angel.jpg"); 
     height: 90%;
@@ -68,8 +110,6 @@ nav li a:hover{
 .begin{
     margin: 0;
     background-color: black;
-    
-    
     border: 1px solid black;
 }
 .begin a{
@@ -111,11 +151,13 @@ nav li a:hover{
 h1{
     text-align: center;
     font-family: 'Bubbler One', sans-serif;
+    
     /*font-family: 'Spicy Rice';*/
 }
 
 h2{
     font-family: 'Atomic Age';
+    font-size: 130%;
 }
 .proj{
     margin: 0;
@@ -141,6 +183,11 @@ h2{
     margin-left: auto;
     margin-right: auto;
 }
+.description-pic:hover{
+    width: 550px;
+    /*border: 2px solid gray;*/
+}
+
 #evoting{
     /*background-color: navy;*/
 }
@@ -214,6 +261,7 @@ img {
     /*height: 100px;*/
     background-color: grey;
     box-shadow: 10px 10px 5px #888888;
+    margin-bottom: 15px;
 }
 .caption {
     font-size: 80%;
@@ -225,6 +273,9 @@ img {
     margin: 0;
     min-height: 10%;
     background-color: black;
+    color: white;
+    font-size: 50%;
+    text-align: center;
 }
 .icon{
     box-shadow: none;
@@ -233,19 +284,80 @@ img {
     border-radius: 50%;
     background-color: black;
 }
+.icon:hover{
+    width: 90px;
+}
 .icons{
-    width: 30%;
+    width: 40%;
     display: block;
     margin-left: auto;
     margin-right: auto;
     text-align: center;
     padding-top: 1%;
     /*border: 1px solid green;*/
+    
+}
+
+.resume{
+ text-decoration: none;
+    font-size: 100%;
+    
+
+}
+#resume{
+    text-decoration: none;
+    font-size: 170%;
+    color: white;
+    font-family: 'Atomic Age';
+    
+    /*margin:0;*/
+    margin-top: 30px;
+    /*padding: 0;*/
+    border-bottom: 1px solid lightblue;
+    
+}
+#resume:hover{
+    font-size: 200%;
+    
 }
 
 
+@media only screen and (max-width: 768px) {
+    nav li{
+        display: block;
+    }
+ .introtext{
+     width: 90%;
+ }
+ .projtext{
+     width: 90%;
+ }
+ .description-pic{
+     width: 350px;
+ }
+ div.image{
+     padding: 0;
+     padding-bottom: 15px;
+     width: 350px;
+     display: block;
+ }
 
-/*.caption p{
+ .hero-image{
+     display: block;
+     height: 559px;
+ }
+.title{
+    display: none;
+}
+ .button{
+    border: none;
+    color: white;
+    padding: 15px 32px;
     text-align: center;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
 
-}*/
+ }
+
+}
